@@ -2,6 +2,7 @@
 v4.2.17-git
 -----------
 
+[jan] Fix regression when exporting single tags to iCalendar CATEGORIES.
 [jan] Officially support PHP 7.
 
 
